<resources>
    <string name="app_name">PaperLayer</string>
    <string name="app_logo_description">PaperLayer Logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profile</string>
    <string name="title_projects">Projects</string>
    <string name="title_home">Home</string>
    <string name="text_main_screen">PaperLayer</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_guest">Login as a guest</string>
    <string name="text_email">E-Mail</string>
    <string name="text_password">Password</string>
    <string name="text_login_screen">PaperLayer</string>
    <string name="err_no_matching_passwords">The passwords entered does not match</string>
    <string name="err_invalid_username">You must enter an username at least length of 6 characters.</string>
    <string name="err_invalid_email">You must enter a valid email.</string>
    <string name="err_invalid_password">You must enter a password at least length of 6 characters.</string>
    <string name="err_not_unique_username">Username is either not unique or not in a suitable format.</string>
    <string name="text_username">Username</string>
    <string name="text_password_confirm">Password Confirm</string>
    <string name="text_birthday_example">Birthday (YYYY-MM-DD)</string>
    <string name="text_first_name">First name</string>
    <string name="text_last_name">Last name</string>
    <string name="err_invalid_name">Please enter a valid name.</string>
    <string name="err_no_name">Please enter your name.</string>
    <string name="profile_avatar_description">Profile avatar</string>
    <string name="profile_settings_description">Settings button</string>
    <string name="profile_email">Email</string>
    <string name="profile_age">Age</string>
    <string name="profile_birthday">Birthday</string>
    <string name="profile_interests">Interests</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_expertise">Expertise</string>
    <string name="profile_bio">Biography</string>
    <string name="profile_gender_dialog_title">Select Gender</string>
    <string name="project_owner_title">Owner</string>
    <string name="project_type_title">Project Type</string>
    <string name="project_due_date_title">Due Date</string>
    <string name="project_state_title">Project State</string>
    <string name="project_description_title">Project Description</string>
    <string name="title_create_project">Create Project</string>
    <string name="project_name">Project Name</string>
    <string name="project_description">Project Description</string>
    <string name="requirements">Requirements</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="text_create">CREATE</string>
    <string name="project_due_date">Project Due Date</string>
    <string name="project_type">Project Type :</string>
    <string name="project_state">Project State :</string>
    <string name="public_project">Public project?</string>
    <string name="please_select_date">Please select date..</string>
    <string name="date">Date</string>
    <string name="project_successfully_created">Project successfully created!</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="report">Report</string>
    <string name="rating">Rating</string>
    <string name="give_rating">Give Rating</string>
    <string name="request_sent">Request sent</string>
    <string name="edit_project">Edit Project</string>
    <string name="text_edit_project">EDIT PROJECT</string>
    <string name="project_edit_success">Project successfully edited!</string>
    <string name="done">DONE</string>
    <string name="event_deadline_date_header">Submission Deadline</string>
    <string name="event_date_header">Event Date</string>
    <string name="event_type_header">Event Type</string>
    <string name="event_title_placeholder">ISAECT 2020</string>
    <string name="event_description_placeholder">ISAECT 2020 - International Symposium on Advanced Electrical and Communication Technologies</string>
    <string name="event_deadline_date_placeholder">2020–10–27</string>
    <string name="event_date_placeholder">2020–10–25</string>
    <string name="event_type_placeholder">academic conference</string>
    <string name="selected_tag">You selected %1$d tags.</string>
    <string name="select_tag_title">Choose project tags</string>
    <string name="project_detail_tag_not_found">There is no tags in this project. You can add tags to project from project edit page.</string>
    <string name="project_detail_event_not_found">There is no events in this project. You can add event to project from project edit page.</string>
    <string name="project_detail_tag_title">Tags</string>
    <string name="project_detail_milestone_item_title">Milestone</string>
    <string name="project_detail_milestone_title">Milestones</string>
    <string name="project_detail_event_title">Events</string>
    <string name="project_detail_tab_title_project">Project</string>
    <string name="project_detail_tab_title_member">Members</string>
    <string name="project_requirements_title">Project Requirements</string>
    <string name="content_description_paperlayer_logo">PaperLayer Logo</string>
    <string name="content_description_report_user">Report User</string>
    <!--  Report Page  -->
    <string name="report_type">Report Type</string>
    <string name="report_description">Report Description (Optional)</string>
    <string name="send">Send</string>
    <!-- Report Types -->
    <string name="disturbing_other_users">Disturbing other users</string>
    <string name="disturbing_posts">Sharing unrelated or disturbing posts</string>
    <string name="spam">Spam</string>
    <string name="fake_profile">Fake Profile</string>
    <string name="stolen_account">Stolen Account</string>
    <string name="feed">Feed</string>
    <!--  Invitations  -->
    <string name="no_invitations">There are no invitations</string>
</resources>