<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryLightColor"
    tools:context="com.bounswe2020group3.paperlayer.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/colorBlack"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:text="@string/text_login_screen"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textViewLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="16dp"
            android:gravity="start"
            android:textColor="@color/colorBlack"
            android:text="@string/text_email"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="36dp"

            style="@style/EditTextDefault"
            android:inputType="textPersonName"
            android:hint="@string/text_email" />

        <TextView
            android:id="@+id/textViewLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="16dp"
            android:gravity="start"
            android:text="@string/text_password"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            style="@style/EditTextDefault"
            android:inputType="textPassword"
            android:hint="@string/text_password"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonDefault"
            android:text="@string/text_login" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonDefault"
            android:text="@string/text_register" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonGuest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonDefault"
            android:text="Login as a Guest" />

    </LinearLayout>

</FrameLayout>