<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewTitle"
        style="@style/TextViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_md"
        android:text="@string/edit_project"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutEditProject"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/buttonEditProject"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        tools:visibility="visible">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_md">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_md"
                    android:layout_marginVertical="@dimen/margin_sm"
                    android:hint="@string/project_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextProjectName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_md"
                    android:layout_marginVertical="@dimen/margin_sm"
                    android:hint="@string/project_description">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_md"
                    android:layout_marginVertical="@dimen/margin_sm"
                    android:hint="@string/requirements">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextRequirements"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>


                <RadioGroup
                    android:id="@+id/radioGroupIsPublic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_md"
                    android:layout_marginVertical="@dimen/margin_sm"
                    android:background="@drawable/border_with_corner_radius"
                    android:padding="@dimen/padding_sm">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/public_project" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioButtonYes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yes"
                        android:textColor="@color/material_on_background_emphasis_medium" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioButtonNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no"
                        android:textColor="@color/material_on_background_emphasis_medium" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_md"
                    android:layout_marginTop="@dimen/margin_sm"
                    android:background="@drawable/border_with_corner_radius"
                    android:baselineAligned="true"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/padding_sm"
                    android:paddingStart="@dimen/padding_md">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/project_state" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spinnerProjectState"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_md"
                    android:layout_marginTop="@dimen/margin_md"
                    android:background="@drawable/border_with_corner_radius"
                    android:baselineAligned="true"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/padding_sm"
                    android:paddingStart="@dimen/padding_md">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/project_type" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spinnerProjectType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_md"
                    android:layout_marginVertical="@dimen/margin_sm"
                    android:background="@drawable/border_with_corner_radius">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/padding_md"
                        android:text="@string/project_due_date" />

                    <LinearLayout
                        android:id="@+id/buttonDatePicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/textViewDate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="@dimen/margin_md"
                            android:layout_weight="1"
                            android:text="@string/please_select_date" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginHorizontal="@dimen/margin_lg"
                            android:layout_marginVertical="@dimen/margin_sm"
                            android:src="@drawable/ic_calendar"
                            android:text="@string/date" />
                    </LinearLayout>


                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonEditProject"
        style="@style/ButtonDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_edit_project"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutSuccess"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <TextView
            style="@style/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin_md"
            android:text="@string/project_successfully_created" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="@dimen/margin_sm"
            android:src="@drawable/ic_success" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>