<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/padding_sm"
    android:paddingVertical="@dimen/padding_sm"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_sm"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="250dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                app:cardCornerRadius="250dp">

                <ImageView
                    android:id="@+id/imageViewProfileAvatar"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:contentDescription="@string/profile_avatar_description"
                    android:padding="0dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_avatar" />

            </com.google.android.material.card.MaterialCardView>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/margin_md"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/userFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFollowListButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonFollowListFollow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_md"
            android:textSize="12sp"
            android:text="@string/follow"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/buttonFollowListRequestSent"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_md"
            android:textSize="12sp"
            android:text="@string/request_sent"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/buttonFollowListUnfollow"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_md"
            android:textSize="12sp"
            android:text="@string/unfollow"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center" />

        <LinearLayout
            android:id="@+id/buttonGroupAcceptRejectRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonFollowListRejectRequest"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="Reject"
                android:textColor="@color/colorBlack"
                android:layout_marginHorizontal="@dimen/margin_sm"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/buttonFollowListAcceptRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="Accept"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>